--- a/client/manifest.json
+++ b/client/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Snapdrop",
-    "short_name": "Snapdrop",
+    "name": "Snapdrop JP",
+    "short_name": "Snapdrop JP",
     "icons": [{
         "src": "images/android-chrome-192x192.png",
         "sizes": "192x192",
