--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     command: ash -c "npm i && node index.js"
   nginx:
     build:
-      context: ./docker/
-      dockerfile: nginx-with-openssl.Dockerfile
+      context: ./
+      dockerfile: Dockerfile
     image: "nginx-with-openssl"
     volumes:
       - ./client:/usr/share/nginx/html
