--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,12 @@ services:
     volumes:
       - ./client:/usr/share/nginx/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/default.conf.template:/etc/nginx/conf.d/default.conf.template
       - ./docker/certs:/etc/ssl/certs
       - ./docker/openssl:/mnt/openssl
     ports:
       - "8080:80"
       - "443:443"
-    env_file: ./docker/fqdn.env
+    env_file: ./docker/server.env
     entrypoint: /mnt/openssl/create.sh
-    command: sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g "daemon off;"
+    command: /bin/sh -c "envsubst  '$$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
