--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,6 @@ services:
     ports:
       - "8080:80"
       - "443:443"
-    env_file: ./docker/fqdn.env
+    env_file: ./docker/server.env
     entrypoint: /mnt/openssl/create.sh
     command: /bin/sh -c "envsubst  '$$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
