--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,4 +23,4 @@ services:
       - "443:443"
     # env_file: ./docker/fqdn.env
     entrypoint: /mnt/openssl/create.sh
-    command: /bin/sh -c "envsubst  '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+    # command: /bin/sh -c "envsubst  '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
