--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     image: "nginx-with-openssl"
     volumes:
       - ./client:/usr/share/nginx/html
-      # - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      # - ./docker/nginx/default.conf.template:/etc/nginx/conf.d/default.conf.template
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/default.conf.template:/etc/nginx/conf.d/default.conf.template
       - ./docker/certs:/etc/ssl/certs
       - ./docker/openssl:/mnt/openssl
     ports:
@@ -23,4 +23,4 @@ services:
       - "443:443"
     # env_file: ./docker/fqdn.env
     entrypoint: /mnt/openssl/create.sh
-    # command: /bin/sh -c "envsubst  '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+    command: /bin/sh -c "envsubst  '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
