--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen       ${PORT};
-    #server_name  your.domain;
+    listen       80;
+    server_name  herokuapp.com;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
@@ -35,7 +35,7 @@ server {
 }
 
 server {
-    listen       443 ssl http2;
+    listen       80;
     ssl_certificate /etc/ssl/certs/snapdrop-dev.crt;
     ssl_certificate_key /etc/ssl/certs/snapdrop-dev.key;
 
