--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen       80;
+    listen       ${PORT};
     server_name  herokuapp.com;
 
     #charset koi8-r;
@@ -35,7 +35,7 @@ server {
 }
 
 server {
-    listen       80;
+    listen       ${PORT};
     ssl_certificate /etc/ssl/certs/snapdrop-dev.crt;
     ssl_certificate_key /etc/ssl/certs/snapdrop-dev.key;
 
