Catch up to original snapdrop

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
 github: robinlinus
-custom: https://paypal.me/robinlinus
+custom: https://www.paypal.com/donate/?hosted_button_id=MG8GV7YCYT352
 github: Bellisario
