--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "snapdrop",
-  "private": true,
-  "version": "1.0.0",
+  "name": "pairdrop",
+  "version": "1.7.6",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "start:prod": "node index.js --rate-limit --auto-restart"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-rate-limit": "^6.8.0",
     "ua-parser-js": "^1.0.35",
+    "unique-names-generator": "^4.3.0",
     "ws": "^8.13.0"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=15"
   }
 }
